src/objects/loan__Loan_Account_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>loan__Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Queue/Condition Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Enabled_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>Loan_Account_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Reason_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reason</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Lookup__c.loan__Lookup_Sub_Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Result__c</valueField>
            </filterItems>
            <filterItems>
                <field>loan__Lookup__c.loan__Lookup_Type__c</field>
                <operation>equals</operation>
                <value>CRB_CONDITION_REASON_CD</value>
            </filterItems>
            <filterItems>
                <field>loan__Lookup__c.loan__Enabled_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Lookup__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Loan_Account_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Result__c</fullName>
        <label>Result</label>
        <picklist>
            <controllingField>loan__Action__c</controllingField>
            <picklistValues>
                <fullName>Open Special Condition(METRO2)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open Consumer Information(METRO2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Compliance Condition(METRO2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Credit Bureau</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Conditions</label>
    <nameField>
        <displayFormat>LACI-{0000000000}</displayFormat>
        <label>Loan Account Conditions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>